// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/activity-feed/version/CollapsedVersion should correctly render for multiple collaborators 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CollapsedVersion
    action="upload"
    collaborators={
      Object {
        "1": Object {
          "id": 1,
          "name": "Person one",
        },
        "2": Object {
          "id": 2,
          "name": "Person two",
        },
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    versionEnd={10}
    versionStart={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="box-ui-version-message"
        >
          <FormattedMessage
            defaultMessage="{numberOfCollaborators} collaborators uploaded versions {versions}"
            id="boxui.activityFeed.versionMultipleUsersUploaded"
            values={
              Object {
                "numberOfCollaborators": 2,
                "versions": <span
                  className="box-ui-version-range"
                >
                  1
                   - 
                  10
                </span>,
              }
            }
          />
        </span>,
        null,
      ],
      "className": "box-ui-collapsed-version",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="{numberOfCollaborators} collaborators uploaded versions {versions}"
            id="boxui.activityFeed.versionMultipleUsersUploaded"
            values={
              Object {
                "numberOfCollaborators": 2,
                "versions": <span
                  className="box-ui-version-range"
                >
                  1
                   - 
                  10
                </span>,
              }
            }
          />,
          "className": "box-ui-version-message",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "defaultMessage": "{numberOfCollaborators} collaborators uploaded versions {versions}",
            "id": "boxui.activityFeed.versionMultipleUsersUploaded",
            "values": Object {
              "numberOfCollaborators": 2,
              "versions": <span
                className="box-ui-version-range"
              >
                1
                 - 
                10
              </span>,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="box-ui-version-message"
          >
            <FormattedMessage
              defaultMessage="{numberOfCollaborators} collaborators uploaded versions {versions}"
              id="boxui.activityFeed.versionMultipleUsersUploaded"
              values={
                Object {
                  "numberOfCollaborators": 2,
                  "versions": <span
                    className="box-ui-version-range"
                  >
                    1
                     - 
                    10
                  </span>,
                }
              }
            />
          </span>,
          null,
        ],
        "className": "box-ui-collapsed-version",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="{numberOfCollaborators} collaborators uploaded versions {versions}"
              id="boxui.activityFeed.versionMultipleUsersUploaded"
              values={
                Object {
                  "numberOfCollaborators": 2,
                  "versions": <span
                    className="box-ui-version-range"
                  >
                    1
                     - 
                    10
                  </span>,
                }
              }
            />,
            "className": "box-ui-version-message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "defaultMessage": "{numberOfCollaborators} collaborators uploaded versions {versions}",
              "id": "boxui.activityFeed.versionMultipleUsersUploaded",
              "values": Object {
                "numberOfCollaborators": 2,
                "versions": <span
                  className="box-ui-version-range"
                >
                  1
                   - 
                  10
                </span>,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/version/CollapsedVersion should correctly render for multiple collaborators 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <span
    className="box-ui-version-range"
  >
    1
     - 
    10
  </span>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        1,
        " - ",
        10,
      ],
      "className": "box-ui-version-range",
    },
    "ref": null,
    "rendered": Array [
      1,
      " - ",
      10,
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          1,
          " - ",
          10,
        ],
        "className": "box-ui-version-range",
      },
      "ref": null,
      "rendered": Array [
        1,
        " - ",
        10,
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/version/CollapsedVersion should correctly render for single collaborator 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CollapsedVersion
    action="upload"
    collaborators={
      Object {
        "1": Object {
          "id": 1,
          "name": "Person one",
        },
      }
    }
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    versionEnd={10}
    versionStart={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span
          className="box-ui-version-message"
        >
          <FormattedMessage
            defaultMessage="{name} uploaded versions {versions}"
            id="boxui.activityFeed.versionUploadCollapsed"
            values={
              Object {
                "name": <strong>
                  Person one
                </strong>,
                "versions": <span
                  className="box-ui-version-range"
                >
                  1
                   - 
                  10
                </span>,
              }
            }
          />
        </span>,
        null,
      ],
      "className": "box-ui-collapsed-version",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="{name} uploaded versions {versions}"
            id="boxui.activityFeed.versionUploadCollapsed"
            values={
              Object {
                "name": <strong>
                  Person one
                </strong>,
                "versions": <span
                  className="box-ui-version-range"
                >
                  1
                   - 
                  10
                </span>,
              }
            }
          />,
          "className": "box-ui-version-message",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "defaultMessage": "{name} uploaded versions {versions}",
            "id": "boxui.activityFeed.versionUploadCollapsed",
            "values": Object {
              "name": <strong>
                Person one
              </strong>,
              "versions": <span
                className="box-ui-version-range"
              >
                1
                 - 
                10
              </span>,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "span",
      },
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span
            className="box-ui-version-message"
          >
            <FormattedMessage
              defaultMessage="{name} uploaded versions {versions}"
              id="boxui.activityFeed.versionUploadCollapsed"
              values={
                Object {
                  "name": <strong>
                    Person one
                  </strong>,
                  "versions": <span
                    className="box-ui-version-range"
                  >
                    1
                     - 
                    10
                  </span>,
                }
              }
            />
          </span>,
          null,
        ],
        "className": "box-ui-collapsed-version",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="{name} uploaded versions {versions}"
              id="boxui.activityFeed.versionUploadCollapsed"
              values={
                Object {
                  "name": <strong>
                    Person one
                  </strong>,
                  "versions": <span
                    className="box-ui-version-range"
                  >
                    1
                     - 
                    10
                  </span>,
                }
              }
            />,
            "className": "box-ui-version-message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "defaultMessage": "{name} uploaded versions {versions}",
              "id": "boxui.activityFeed.versionUploadCollapsed",
              "values": Object {
                "name": <strong>
                  Person one
                </strong>,
                "versions": <span
                  className="box-ui-version-range"
                >
                  1
                   - 
                  10
                </span>,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`features/activity-feed/version/CollapsedVersion should correctly render for single collaborator 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <span
    className="box-ui-version-range"
  >
    1
     - 
    10
  </span>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        1,
        " - ",
        10,
      ],
      "className": "box-ui-version-range",
    },
    "ref": null,
    "rendered": Array [
      1,
      " - ",
      10,
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          1,
          " - ",
          10,
        ],
        "className": "box-ui-version-range",
      },
      "ref": null,
      "rendered": Array [
        1,
        " - ",
        10,
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
